2 erros